Increase to 30 metrics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Prometheus Metrics generator</title>
 </head>
 <body>
-   <a href="/metrics">/metrics</a>
+<pre>
++-+-+-+-+-+-+-+
+|p|r|o|m|g|e|n|
++-+-+-+-+-+-+-+
+</pre>
+<a href="/metrics">/metrics</a>
 </body>
 </html>
